--- a/06. Fundamentals of AI Agents Using RAG and LangChain/01. Retrieval Augmented Generation (RAG).md
+++ b/06. Fundamentals of AI Agents Using RAG and LangChain/01. Retrieval Augmented Generation (RAG).md
@@ -8,7 +8,7 @@
 - RAG is an AI framework that helps optimize the output of large language models or LLMs.
 - RAG uses the capabilities of LLMs and specific domains or the internal database of an organization without retraining the model.
 
-## importance of RAG in training LLMs
+## Importance of RAG in training LLMs
 - Pre-trained LLMs may face challenges with specific domain knowledge that they are not trained in.
 - While they perform well on general tasks, they may provide inaccurate responses to specialized queries.
 - Therefore, adding external relevant knowledge sources helps ensure more accurate responses.
